--- a/packages/cloud-gcp/package.json
+++ b/packages/cloud-gcp/package.json
@@ -46,7 +46,7 @@
     "@google-cloud/container": "^5.13.0",
     "@google-cloud/compute": "^4.10.0",
     "@google-cloud/secret-manager": "^6.1.0",
-    "@gati-framework/core": "workspace:*"
+    "@gati-framework/core": "0.4.5"
   },
   "devDependencies": {
     "@types/node": "^20.10.0",
