--- a/packages/observability-adapters/package.json
+++ b/packages/observability-adapters/package.json
@@ -31,7 +31,7 @@
     "clean": "rimraf dist"
   },
   "dependencies": {
-    "@gati-framework/contracts": "workspace:^"
+    "@gati-framework/contracts": "^1.2.0"
   },
   "peerDependencies": {
     "@aws-sdk/client-cloudwatch": "^3.0.0",
