--- a/packages/production-hardening/package.json
+++ b/packages/production-hardening/package.json
@@ -23,7 +23,7 @@
     "zod": "^3.24.1",
     "ajv": "^8.17.1",
     "dotenv": "^16.4.7",
-    "@gati-framework/core": "workspace:*"
+    "@gati-framework/core": "0.4.5"
   },
   "devDependencies": {
     "@types/node": "^20.10.0",
