--- a/packages/runtime/package.json
+++ b/packages/runtime/package.json
@@ -1,6 +1,6 @@
 {
   "name": "@gati-framework/runtime",
-  "version": "2.0.7",
+  "version": "2.0.8",
   "description": "Gati runtime execution engine for running handler-based applications",
   "type": "module",
   "main": "./dist/index.js",
@@ -115,8 +115,8 @@
   },
   "homepage": "https://github.com/krishnapaul242/gati#readme",
   "dependencies": {
-    "@gati-framework/contracts": "workspace:*",
-    "@gati-framework/core": "^0.4.1",
+    "@gati-framework/contracts": "^1.2.0",
+    "@gati-framework/core": "^0.4.5",
     "@opentelemetry/api": "^1.9.0",
     "pino": "^9.5.0"
   },
